Fix reviews count not showing on Single Product page

--- a/assets/js/atomic/blocks/product-elements/rating/style.scss
+++ b/assets/js/atomic/blocks/product-elements/rating/style.scss
@@ -44,14 +44,6 @@
 		}
 	}
 
-	&__link {
-		display: inline-block;
-		height: 1.618em;
-		width: 100%;
-		text-align: inherit;
-		@include font-size(small);
-	}
-
 	.wc-block-all-products & {
 		margin-top: 0;
 		margin-bottom: $gap-small;
